samples/_failures_safe/1761192452_2316ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_618a2b95.c: In function ‘main’:
./samples/SAFE/__tmp_618a2b95.c:146:17: error: expected expression at end of input
  146 |                 if (matrix_add(&a, &b, &result))
      |                 ^~
./samples/SAFE/__tmp_618a2b95.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_618a2b95.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_618a2b95.c:146:17: error: expected declaration or statement at end of input
